# circuit-forge

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  claude.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci-cd.yml  deploy-free.yml
.kiro/specs/circuit-forge/: design.md  requirements.md  tasks.md
.kiro/specs/homepage-redesign/: design.md  requirements.md  tasks.md
.kiro/specs/llm-course-generator/: requirements.md  tasks.md
.kiro/specs/llm-tool-functions/: design.md  requirements.md  tasks.md
.kiro/specs/session-management/: design.md  requirements.md  tasks.md
.kiro/specs/user-llm-api-keys/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
azure/: container-apps.bicep
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
backend/.hypothesis/constants/: 23d5a363d8433971  39b2ae52152f1447  452ebfb89b7b8c03  4e79c8fd02498e5b  51492281df48d8dc  592088f9f0247961  7350e197cf2479d7
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  components.py  courses.py  sessions.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/events/: __init__.py
backend/app/exceptions/: base.py
backend/app/models/: __init__.py  circuit.py  course.py  events.py  session.py
backend/app/repositories/: __init__.py  base.py  course_repository.py  event_repository.py  participant_repository.py  session_repository.py
backend/app/services/: __init__.py  circuit_service.py  component_registry.py  course_service.py  llm_provider_factory.py  llm_providers.py  llm_service.py  llm_tools.py  permission_service.py  session_service.py  simulation_engine.py  simulation_service.py
backend/app/websocket/: __init__.py  broadcaster.py  handler.py  messages.py
backend/tests/: __init__.py  test_circuit_serialization.py  test_llm_providers.py  test_schema_version.py
cli/: README.md  pyproject.toml
cli/src/circuitforge_bridge/: __init__.py  main.py
frontend/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/constants/: additional-templates.ts  componentDetails.ts  components.ts  exampleCircuits.ts  llmProviders.test.ts  llmProviders.ts  templates.ts
frontend/src/hooks/: index.ts  useCloseGuard.ts  useInView.ts  useSessionRecovery.ts  useTabSync.ts
frontend/src/services/: api.ts  blueprintLoader.ts  export.ts  sessionCloseGuard.test.ts  sessionCloseGuard.ts  sessionPersistence.test.ts  sessionPersistence.ts  simulation.ts  tabSync.test.ts  tabSync.ts  websocket.test.ts  websocket.ts
frontend/src/stores/: circuitStore.ts  index.ts  llmConfigStore.ts  sessionStore.ts  uiStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
shared/schemas/: circuit.schema.json  events.schema.json  participant.schema.json  session.schema.json
(+48 files in other folders)
